# aoc24

./: .gitignore  CMakeLists.txt  scaffold.py
src/day1/: main.cpp  solution.cpp  solution.hpp
src/day10/: main.cpp  solution.cpp  solution.hpp
src/day11/: main.cpp  solution.cpp  solution.hpp
src/day2/: main.cpp  solution.cpp  solution.hpp
src/day3/: solution.cpp
src/day4/: main.cpp  solution.cpp  solution.hpp
src/day5/: main.cpp  solution.cpp  solution.hpp
src/day6/: main.cpp  solution.cpp  solution.hpp
src/day7/: main.cpp  solution.cpp  solution.hpp
src/day8/: main.cpp  solution.cpp  solution.hpp
src/day9/: main.cpp  solution.cpp  solution.hpp
src/utils/: utils.hpp  utils.ixx
